Fix rotation semantic integrity
